--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-brand{
+  color:#61dafb;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn-brand{
+  background-image: linear-gradient(75deg, #19d3ae,#0fcfec);
+  border-color: transparent;
+  text-transform: uppercase;
+  font-weight: 600;
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +22,3 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
